--- a/sass/app.scss
+++ b/sass/app.scss
@@ -5,6 +5,7 @@ html {
 body {
   height: 100%;
   position: relative;
+  background-color: #eeeeee;
 }
 
 .gallery {
@@ -28,7 +29,7 @@ body {
     padding-left: 0;
     padding-right: 0;
   }
-  & > .item {
+  & .item {
     width: 100%;
     height: 240px;
     text-align: center;
@@ -37,6 +38,35 @@ body {
     img {
       width: 240px;
       height: 240px;
+    }
+  }
+}
+
+.toolbar {
+  left: 0;
+  top: 50%;
+  width: 100%;
+  position: absolute;
+  transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  &-btn {
+    border: none;
+    width: 50px;
+    height: 50px;
+    display: block;
+    color: #ffffff;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 50%;
+    background-color: rgba(0,0,0,0.2);
+    &-prev {
+      float: left;
+    }
+    &-next {
+      float: right;
     }
   }
 }
