--- a/sass/app.scss
+++ b/sass/app.scss
@@ -17,6 +17,9 @@ body {
   padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
+  background-color: #ffffff;
+  box-shadow: 0 0 1px 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 0 1px 0 rgba(0,0,0,0.2);
   -webkit-box-sizing: border-box;
   transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
