--- a/style/sliderit.css
+++ b/style/sliderit.css
@@ -3,8 +3,8 @@
   overflow: hidden; }
 
 .slider-inner.is-transition {
-  -webkit-transition: all .6s ease-out;
-  transition: all .4s ease; }
+  -webkit-transition: all .75s;
+  transition: all .75s; }
 .slider-inner.is-horizon {
   white-space: nowrap;
   word-spacing: -0.31em;
