--- a/sass/app.scss
+++ b/sass/app.scss
@@ -33,8 +33,14 @@ body {
     vertical-align: top;
     display: inline-block;
     vertical-align: middle;
+    img {
+      @media (max-width: 768px) and (min-width: 320px)  {
+        max-width: 100% !important;
+      }
+    }
     img.icon {
-      width: 240px;
+      min-width: 240px;
+      max-width: 300px;
     }
     img.ui {
       max-width: 450px;
