--- a/style/app.css
+++ b/style/app.css
@@ -5,19 +5,37 @@ body {
   height: 100%;
   background-color: #ffffff; }
 
-.page-wrap {
+.main {
   height: 100%;
   overflow: auto; }
 
 .page {
-  min-height: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  border-bottom: 1px solid #dddddd; }
+  display: table;
+  width: 100%;
+  height: 100%; }
 
-.page > img {
-  display: block;
-  min-width: 40%;
-  max-width: 100%;
+.page-wrap {
+  display: table-cell;
+  width: 100%;
+  text-align: center;
+  vertical-align: middle; }
+
+img {
+  display: inline-block;
+  min-width: 30%;
+  max-width: 60%;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  vertical-align: middle;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3); }
+
+.icon {
+  max-width: 50%; }
+
+.icon.icon--small {
+  min-width: 0;
+  width: 10%; }
+
+.ui {
+  max-height: 90%; }
